# percolation-inversion-compiler

./: .gitignore  AGENTS.md  CHALLENGE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  INTEROP_PIC.md  NOTICE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  agent-manifest.json  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  pypi-publish.yml  release.yml  security.yml
docs/: 00-overview.md  01-quickstart.md  04-collective-phase-certificate.md  11-safety-boundary.md  acceleration-certificates.md  agent-closed-loop-runtime.md  agent-external-communication.md  agent-integration.md  agent-to-operator-request.md  alt-ecpt-lift.md  alt.md  architecture.md  asi-proxy-acceleration.md  benchmarks.md  bit-inversion-engine.md  canonical-implementation-readiness.md  ccr-pic-roundtrip.md  cli-reference.md  collective-phase-certificates.md  collective-phase-runtime.md  cross-repo-conformance.md  ecpt-acceleration-score.md  ecpt-packet-ecology-runtime.md  ecpt-phase-control-runtime.md  edge-relation-verifiers.md  effective-packet-graph.md  external-obligations.md  for-agents.md  glossary.md  i18n-and-portability.md  identity-and-sybil-resistance.md  live-connectors.md  mathematical-contracts.md  mcp-a2a-safety.md  no-self-rewrite-ledger.md  operation-gate.md  operator-adoption.md  packet-promotion.md  phase-acceleration.md  phase-dashboard.md  (+24 more)
docs/benchmarks/: phase-benchmark-suite.md
docs/contracts/: agent-check-compact-contract.md  operator-adoption-sidecar-contract.md  phase-plan-compact-contract.md
docs/integrations/: README.md  github-actions.md  packet-exchange.md
docs/interop/: ccr.md
docs/wiki/: Home.md  _Sidebar.md
examples/: agent_connector_spec.json  agent_population.json  agent_population_signed.json  collective_packet_registry.json  collective_protocol_frame.json  collective_runtime_state.json  ecology_loop_state.json  ecology_packets.json  ecology_threshold.json  ecpt_asi_proxy_target.json  ecpt_basin_contract.json  ecpt_phase_control_actions.json  ecpt_phase_control_budget.json  ecpt_phase_control_state.json  edge_relation_certificate.json  evidence_artifact_content.json  evidence_envelope.json  external_obligations.json  external_verifier_hook.json  frontier_records.json  minimal_invalid_main_frontier.json  minimal_registry.json  runtime_action_results.json  runtime_agent_task.json  runtime_baseline_run.json  runtime_candidate_run.json  runtime_executor_policy.json  runtime_loop_inputs.jsonl  runtime_route_requests.json  runtime_service_step_request.json  runtime_step_input_with_evidence.json  runtime_threshold.json  sqot_queue.json  theory_audit_summary.json
examples/agent_minimal/: README.md  commands.ps1  full_workflow.sh  intake_report.example.json
examples/agent_network/: README.md  agent_message.json  agent_message_signed_shape.json  expired_message.json  feed.xml  general_intake_report.example.json  inbox.json  malformed_feed.xml  packets.ndjson  page.html  policy_adversarial_network.json  policy_controlled_web.json  replay_inbox.json  runtime_bridge_report.example.json
examples/alt/: admission_packet.json  alt_cara_certificate.json  baseline_refresh_certificate.json  deprecation_record.json  foundry_state.json  hazard_overflow_certificate.json  trace.json  (+8 more)
schemas/: alias-ledger.schema.json  cache-invalidation-report.schema.json  canonical-quotient-report.schema.json  cegar-simulation-barrier.schema.json  checker-cost-report.schema.json  confidence-sequence-report.schema.json  construct-validity-report.schema.json  cross-validated-anchor-transfer.schema.json  density-ratio-transport-report.schema.json  diagnostic-reserve-report.schema.json  duplicate-mass-report.schema.json  dynamic-regime-acceleration-surface.schema.json  dynamic-risk-report.schema.json  evidence-product-report.schema.json  exactness-certified-release-interval.schema.json  exchange-tensor-report.schema.json  fcu-check-report.schema.json  incremental-update-report.schema.json  index.json  instrumentation-contract.schema.json  leakage-audit-report.schema.json  lifecycle-cost-report.schema.json  lifecycle-recomputation-scheduler.schema.json  loop-bundle-report.schema.json  loop-import-report.schema.json  loop-next-report.schema.json  martingale-partition-deficiency-report.schema.json  mec-frontier-report.schema.json  mechanism-ablation-report.schema.json  mechanism-factorized-channel-cube.schema.json  mission-validity-certificate.schema.json  negative-control-ledger.schema.json  observation-consistency-report.schema.json  observation-window-report.schema.json  opportunity-measure-constructor.schema.json  performance-bench-report.schema.json  performance-report.schema.json  physical-observation-residual-report.schema.json  protocol-mutation-report.schema.json  queue-morphism-report.schema.json  (+15 more)
scripts/: check_distribution_artifacts.py  check_publish_safety.py  generate_sbom.py  validate_citation.py
tests/: test_adapters.py  test_adoption_sidecar_cli.py  test_agent_autonomy_audit.py  test_agent_full_extra_and_pip_bundle.py  test_algorithms.py  test_alt_ecpt_lift.py  test_autocatalytic_closure.py  test_bit_inversion_engine.py  test_canonical_implementation_readiness.py  test_ccr_interop_additions.py  test_cli.py  test_compact_contracts.py  test_core.py  test_effective_packet_graph.py  test_executable_paths.py  test_extractors.py  test_github_actions_example.py  test_integration_examples_positioning.py  test_multilingual_renderers.py  test_operator_request_sidecar.py  test_os_independent_sidecar_paths.py  test_packet_exchange_sidecar.py  test_phase_acceleration.py  test_phase_benchmark_suite.py  test_phase_dashboard_sidecar.py  test_phase_lab_store.py  test_phase_threshold_certificates.py  test_phase_window_observer.py  test_publish_security.py  test_sidecar_non_interference.py  test_snapshots.py  test_sqot_controller.py  test_trc_compile.py  test_trc_trace_adapter.py  test_v021_algorithm_coverage.py  test_v021_production_sdk.py  test_v022_production_hardening.py  test_v023_ecpt_phase_control.py  test_v024_sqot_packet_ecology.py  test_v02_readiness.py  (+16 more)
(+136 files in other folders)
