[project]
name = "percolation-inversion-compiler"
version = "0.4.4"
description = "ECPT collective phase certificate runtime and finite verifier-routing SDK with ALT abstraction-liquidity foundry, ASI-proxy packet percolation, semantic edge checks, residual ledgers, provenance, and agent integration."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "K. Takahashi" }]
keywords = [
  "ai-agents",
  "agent-runtime",
  "workflow-verification",
  "evidence-routing",
  "verifier-routing",
  "residual-ledger",
  "sybil-resistance",
  "cryptographic-identity",
  "json-schema",
  "runtime-verification",
  "collective-intelligence",
  "percolation",
  "formal-methods",
  "abstraction-liquidity",
  "ecpt",
  "sqot",
  "alt",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "defusedxml>=0.7",
  "jsonschema>=4.23",
  "pydantic>=2.8",
  "PyYAML>=6.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
science = [
  "networkx>=3.3",
  "numpy>=2.0",
  "pint>=0.24",
  "scipy>=1.14",
]
ot = [
  "POT>=0.9.4",
]
lp = [
  "highspy>=1.8",
]
all = [
  "percolation-inversion-compiler[science,ot,lp,connectors,server,identity]",
]
agent-full = [
  "percolation-inversion-compiler[connectors,server,identity]",
]
connectors = [
  "httpx>=0.27",
]
server = [
  "fastapi>=0.115",
  "uvicorn>=0.32",
]
identity = [
  "cryptography>=42",
]
dev = [
  "bandit[toml]>=1.7",
  "build>=1.2",
  "hypothesis>=6.100",
  "mypy>=1.10",
  "msgpack>=1.2.1",
  "pip-audit>=2.7",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "types-defusedxml>=0.7",
  "types-jsonschema>=4.23",
  "types-PyYAML>=6.0",
  "twine>=6.1",
]

[project.scripts]
pic = "percolation_inversion_compiler.cli:app"

[project.urls]
Homepage = "https://github.com/kadubon/percolation-inversion-compiler"
Repository = "https://github.com/kadubon/percolation-inversion-compiler"
Documentation = "https://github.com/kadubon/percolation-inversion-compiler#readme"
Issues = "https://github.com/kadubon/percolation-inversion-compiler/issues"
Changelog = "https://github.com/kadubon/percolation-inversion-compiler/blob/main/CHANGELOG.md"
DOI = "https://doi.org/10.5281/zenodo.20569166"
Works = "https://kadubon.github.io/github.io/works.html"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/percolation_inversion_compiler"]
artifacts = [
  "src/percolation_inversion_compiler/data/**/*.json",
  "src/percolation_inversion_compiler/data/**/*.txt",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.report]
fail_under = 90

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
skips = ["B101"]
